crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__classes-2.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"class Foo { a: number = 5; }\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 28,
                    },
                },
                span: 0..28,
                kind: ClassDecl(
                    ClassDecl {
                        ident: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 6,
                                },
                                end: Position {
                                    line: 0,
                                    column: 9,
                                },
                            },
                            span: 6..9,
                            name: "Foo",
                        },
                        class: Class {
                            ident: Ident {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 9,
                                    },
                                },
                                span: 6..9,
                                name: "Foo",
                            },
                            body: [
                                Prop(
                                    ClassProp {
                                        key: Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 12,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 13,
                                                },
                                            },
                                            span: 12..13,
                                            name: "a",
                                        },
                                        value: Some(
                                            Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 24,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 25,
                                                    },
                                                },
                                                span: 24..25,
                                                kind: Lit(
                                                    Num(
                                                        Num {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 24,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 25,
                                                                },
                                                            },
                                                            span: 24..25,
                                                            value: "5",
                                                        },
                                                    ),
                                                ),
                                                inferred_type: None,
                                            },
                                        ),
                                        type_ann: Some(
                                            TypeAnn {
                                                kind: Keyword(
                                                    KeywordType {
                                                        keyword: Number,
                                                    },
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 15,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 21,
                                                    },
                                                },
                                                span: 15..21,
                                                inferred_type: None,
                                            },
                                        ),
                                        is_static: false,
                                        is_optional: false,
                                        is_mutable: false,
                                    },
                                ),
                            ],
                            type_params: None,
                        },
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
