crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__classes-4.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"class Foo { static a: number; }\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 31,
                    },
                },
                span: 0..31,
                kind: ClassDecl(
                    ClassDecl {
                        ident: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 6,
                                },
                                end: Position {
                                    line: 0,
                                    column: 9,
                                },
                            },
                            span: 6..9,
                            name: "Foo",
                        },
                        class: Class {
                            ident: Ident {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 9,
                                    },
                                },
                                span: 6..9,
                                name: "Foo",
                            },
                            body: [
                                Prop(
                                    ClassProp {
                                        key: Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 19,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 20,
                                                },
                                            },
                                            span: 19..20,
                                            name: "a",
                                        },
                                        value: None,
                                        type_ann: Some(
                                            TypeAnn {
                                                kind: Keyword(
                                                    KeywordType {
                                                        keyword: Number,
                                                    },
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 22,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 28,
                                                    },
                                                },
                                                span: 22..28,
                                                inferred_type: None,
                                            },
                                        ),
                                        is_static: true,
                                        is_optional: false,
                                        is_mutable: false,
                                    },
                                ),
                            ],
                            type_params: None,
                        },
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
